166605105-fix(bugfix): removes ids
- removes ids from userseeders file
- fix bug with deactivating/activating a user

[Finishes #166605105]
